Bump SB4, damsel, add provider guarantee deposit